# mon-14-40-task2-mdmkl6

./: README.md  pyproject.toml  task.py
